src/ty/snapshots/tvm__ty__tests__def_not_callable.snap
---
source: src/ty/tests.rs
expression: "check!(r#\"\n        type T;\n        let v = T();\n        v();\n    \"#)"
---
error: type "T" is not callable
3 |  v();
  |  ^


